--- a/Angular/project-name/package.json
+++ b/Angular/project-name/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
