--- a/Angular/project-name/angular.json
+++ b/Angular/project-name/angular.json
@@ -27,7 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "C:\\Users\\Asus NP\\Mohammad_Hossein\\Term_7\\new_win_kar\\KarAmuzi\\Angular\\project-name\\node_modules\\@fortawesome\\fontawesome-free\\css\\all.min.css",
+              "C:\\Users\\Asus NP\\Mohammad_Hossein\\Term_7\\new_win_kar\\KarAmuzi\\Angular\\project-name\\node_modules\\bootstrap\\dist\\css\\bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
